--- a/app/globals.css
+++ b/app/globals.css
@@ -97,7 +97,38 @@
   }
 } */
 
+
+
 body {
-  
- font-family: var(--default-font), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: white;
+  font-family: var(--default-font),
+  system-ui,
+  -apple-system,
+  BlinkMacSystemFont,
+  'Segoe UI',
+  Roboto,
+  Oxygen,
+  Ubuntu,
+  Cantarell,
+  'Open Sans',
+  'Helvetica Neue',
+  sans-serif;
+  background-color: #F4F4F4;
+
+}
+
+.custom__btn {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 14px 19px;
+  @apply rounded-full;
+  max-width: 234px;
+}
+
+button,
+a {
+  @apply transition-all duration-200 ease-linear
 }
