--- a/app/globals.css
+++ b/app/globals.css
@@ -164,3 +164,27 @@ a {
 section {
   @apply  w-full py-6 md:py-12
 }
+
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #b5b8ff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background:  #d8d9ff;;
+  
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color:#262C9C;
+  border-radius: 14px;
+  border: 3px solid #262C9C;
+}
