--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-
 /* ---------------- Popins Fonts ---------------- */
 
 @font-face {
@@ -12,28 +9,31 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: local("Poppins"), url('/font/popins/Poppins-Regular.ttf') format('truetype')
+  src: local("Poppins"),
+    url("/font/popins/Poppins-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: popinsMedium;
   font-style: normal;
   font-display: swap;
   font-weight: 500;
-  src: local("Poppins"), url('/font/popins/Poppins-Medium.ttf') format('truetype')
+  src: local("Poppins"),
+    url("/font/popins/Poppins-Medium.ttf") format("truetype");
 }
 @font-face {
   font-family: poppinsSemiBold;
   font-style: normal;
   font-display: swap;
   font-weight: 600;
-  src: local("Poppins"), url('/font/popins/Poppins-SemiBold.ttf') format('truetype')
+  src: local("Poppins"),
+    url("/font/popins/Poppins-SemiBold.ttf") format("truetype");
 }
 @font-face {
   font-family: poppinsBold;
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: local("Poppins"), url('/font/popins/Poppins-Bold.ttf') format('truetype')
+  src: local("Poppins"), url("/font/popins/Poppins-Bold.ttf") format("truetype");
 }
 
 @font-face {
@@ -41,7 +41,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 800;
-  src: local("Poppins"), url('/font/popins/Poppins-Black.ttf') format('truetype')
+  src: local("Poppins"),
+    url("/font/popins/Poppins-Black.ttf") format("truetype");
 }
 
 /* ---------------- Yekan Bakh Fonts ---------------- */
@@ -51,8 +52,9 @@
   font-style: normal;
   font-display: swap;
   font-weight: 100;
-  src: local("Yekan Bakh FaNum"), url('/font/yekan-bkh/woff/YekanBakhFaNum-thin.woff') format('woff'),
-    url('/font/yekan-bkh/woff2/YekanBakhFaNum-thin.woff2') format('woff2');
+  src: local("Yekan Bakh FaNum"),
+    url("/font/yekan-bkh/woff/YekanBakhFaNum-thin.woff") format("woff"),
+    url("/font/yekan-bkh/woff2/YekanBakhFaNum-thin.woff2") format("woff2");
 }
 
 @font-face {
@@ -60,8 +62,9 @@
   font-style: normal;
   font-display: swap;
   font-weight: 300;
-  src: local("Yekan Bakh FaNum"), url('/font/yekan-bkh/woff/YekanBakhFaNum-Light.woff') format('woff'),
-    url('/font/yekan-bkh/woff2/YekanBakhFaNum-Light.woff2') format('woff2');
+  src: local("Yekan Bakh FaNum"),
+    url("/font/yekan-bkh/woff/YekanBakhFaNum-Light.woff") format("woff"),
+    url("/font/yekan-bkh/woff2/YekanBakhFaNum-Light.woff2") format("woff2");
 }
 
 @font-face {
@@ -69,8 +72,9 @@
   font-style: normal;
   font-display: swap;
   font-weight: normal;
-  src: local("Yekan Bakh FaNum"), url('/font/yekan-bkh/woff/YekanBakhFaNum-Regular.woff') format('woff'),
-    url('/font/yekan-bkh/woff2/YekanBakhFaNum-Regular.woff2') format('woff2');
+  src: local("Yekan Bakh FaNum"),
+    url("/font/yekan-bkh/woff/YekanBakhFaNum-Regular.woff") format("woff"),
+    url("/font/yekan-bkh/woff2/YekanBakhFaNum-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -78,8 +82,9 @@
   font-style: normal;
   font-display: swap;
   font-weight: 600;
-  src: local("Yekan Bakh FaNum"), url('/font/yekan-bkh/woff/YekanBakhFaNum-SemiBold.woff') format('woff'),
-    url('/font/yekan-bkh/woff2/YekanBakhFaNum-SemiBold.woff2') format('woff2');
+  src: local("Yekan Bakh FaNum"),
+    url("/font/yekan-bkh/woff/YekanBakhFaNum-SemiBold.woff") format("woff"),
+    url("/font/yekan-bkh/woff2/YekanBakhFaNum-SemiBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -87,8 +92,9 @@
   font-style: normal;
   font-display: swap;
   font-weight: bold;
-  src: local("Yekan Bakh FaNum"), url('/font/yekan-bkh/woff/YekanBakhFaNum-Bold.woff') format('woff'),
-    url('/font/yekan-bkh/woff2/YekanBakhFaNum-Bold.woff2') format('woff2');
+  src: local("Yekan Bakh FaNum"),
+    url("/font/yekan-bkh/woff/YekanBakhFaNum-Bold.woff") format("woff"),
+    url("/font/yekan-bkh/woff2/YekanBakhFaNum-Bold.woff2") format("woff2");
 }
 
 @font-face {
@@ -96,8 +102,10 @@
   font-style: normal;
   font-display: swap;
   font-weight: 800;
-  src: local("Yekan Bakh FaNum"), url('/font/yekan-bkh/woff/Yekan Bakh FaNum-ExtraBold.woff') format('woff'),
-    url('/font/yekan-bkh/woff2/Yekan Bakh FaNum-ExtraBold.woff2') format('woff2');
+  src: local("Yekan Bakh FaNum"),
+    url("/font/yekan-bkh/woff/Yekan Bakh FaNum-ExtraBold.woff") format("woff"),
+    url("/font/yekan-bkh/woff2/Yekan Bakh FaNum-ExtraBold.woff2")
+      format("woff2");
 }
 
 @font-face {
@@ -105,8 +113,9 @@
   font-style: normal;
   font-display: swap;
   font-weight: 900;
-  src: local("Yekan Bakh FaNum"), url('/font/yekan-bkh/woff/Yekan Bakh FaNum-Black.woff') format('woff'),
-    url('/font/yekan-bkh/woff2/Yekan Bakh FaNum-Black.woff2') format('woff2');
+  src: local("Yekan Bakh FaNum"),
+    url("/font/yekan-bkh/woff/Yekan Bakh FaNum-Black.woff") format("woff"),
+    url("/font/yekan-bkh/woff2/Yekan Bakh FaNum-Black.woff2") format("woff2");
 }
 
 @font-face {
@@ -114,10 +123,11 @@
   font-style: normal;
   font-display: swap;
   font-weight: 950;
-  src: local("Yekan Bakh FaNum"), url('/font/yekan-bkh/woff/Yekan Bakh FaNum-ExtraBlack.woff') format('woff'),
-    url('/font/yekan-bkh/woff2/Yekan Bakh FaNum-ExtraBlack.woff2') format('woff2');
+  src: local("Yekan Bakh FaNum"),
+    url("/font/yekan-bkh/woff/Yekan Bakh FaNum-ExtraBlack.woff") format("woff"),
+    url("/font/yekan-bkh/woff2/Yekan Bakh FaNum-ExtraBlack.woff2")
+      format("woff2");
 }
-
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -125,25 +135,11 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-
-
-
-
 body {
-  font-family: var(--default-font),
-  system-ui,
-  -apple-system,
-  BlinkMacSystemFont,
-  'Segoe UI',
-  Roboto,
-  Oxygen,
-  Ubuntu,
-  Cantarell,
-  'Open Sans',
-  'Helvetica Neue',
-  sans-serif;
-  background-color: #F4F4F4;
-
+  font-family: var(--default-font), system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  background-color: #f4f4f4;
 }
 
 .custom__btn {
@@ -158,13 +154,12 @@ body {
 
 button,
 a {
-  @apply transition-all duration-200 ease-linear
+  @apply transition-all duration-200 ease-linear;
 }
 
 section {
-  @apply  w-full py-6 md:py-12
+  @apply w-full py-6 md:py-12;
 }
-
 
 /* ==================================== Srcrol-Bar ==================================== */
 * {
@@ -178,19 +173,17 @@ section {
 }
 
 *::-webkit-scrollbar-track {
-  background:  #d8d9ff;;
+  background: #d8d9ff;
   border-radius: 3px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color:#262C9C;
+  background-color: #262c9c;
   border-radius: 3px;
-  border: 3px solid #262C9C;
+  border: 3px solid #262c9c;
 }
 
 /* ==================================== END Srcrol-Bar ==================================== */
-
-
 
 #footer-pagination span.swiper-pagination-bullet {
   padding: 0px 8px;
@@ -198,9 +191,26 @@ section {
   background-color: white;
   opacity: 1;
   transition: all 0.5s ease-in;
-  height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,6px));
-  }
-#footer-pagination  .swiper-pagination-bullet.swiper-pagination-bullet-active{
-background-color: #4D8AE5 !important;
-padding: 0px 10px;
+  height: var(
+    --swiper-pagination-bullet-height,
+    var(--swiper-pagination-bullet-size, 6px)
+  );
+}
+#footer-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background-color: #4d8ae5 !important;
+  padding: 0px 10px;
+}
+
+.swiper-slide {
+  width: auto;
+  flex-shrink: 0;
+  display: block;
+  height: 100%;
+  max-height: 100%;
+}
+
+.swiper-wrapper {
+  max-height: 100%;
+  height: 100%;
+  display: flex;
 }
